--- a/Client/styles/vendor.css
+++ b/Client/styles/vendor.css
@@ -4,3 +4,5 @@
 
 @import '../../node_modules/font-awesome/css/font-awesome.css';
 @import '../../node_modules/bootstrap/dist/css/bootstrap.css';
+
+@import "custom.scss";
