--- a/Client/app/+login/login.component.html
+++ b/Client/app/+login/login.component.html
@@ -1,22 +1,42 @@
-﻿<div class="col-md-6 offset-md-3">
-    <div class="card">
-        <div class="card-header">
-            Login
-        </div>
+﻿<!--<div class="col-md-6 offset-md-3">-->
+    <!--<div class="card">-->
+        <!--<div class="card-header">-->
+            <!--Login-->
+        <!--</div>-->
 
-        <div class="card-block">
-            <appc-error-summary [errors]="errors"></appc-error-summary>
-            <appc-dynamic-form (formsubmit)="login($event)" [controls]="controls" [btnText]="'Login'"></appc-dynamic-form>
-        </div>
+        <!--<div class="card-block">-->
+            <!--<appc-error-summary [errors]="errors"></appc-error-summary>-->
+            <!--<appc-dynamic-form (formsubmit)="login($event)" [controls]="controls" [btnText]="'Login'"></appc-dynamic-form>-->
+        <!--</div>-->
 
-    </div>
+    <!--</div>-->
 
-    <p class="text-center font-weight-bold">
-        OR
-    </p>
+    <!--<p class="text-center font-weight-bold">-->
+        <!--OR-->
+    <!--</p>-->
 
-    <div class="text-center">
-        <appc-social-login></appc-social-login>
-    </div>
+    <!--<div class="text-center">-->
+        <!--<appc-social-login></appc-social-login>-->
+    <!--</div>-->
 
-</div>
+<!--</div>-->
+<div class="container">
+    <div class="card card-container">
+        <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
+        <p id="profile-name" class="profile-name-card"></p>
+        <form class="form-signin">
+            <span id="reauth-email" class="reauth-email"></span>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <div id="remember" class="checkbox">
+                <label>
+                    <input type="checkbox" value="remember-me"> Remember me
+                </label>
+            </div>
+            <button class="btn btn-lg btn-success btn-block btn-signin" type="submit">Login</button>
+        </form><!-- /form -->
+        <a href="#" class="forgot-password">
+            Forgot the password?
+        </a>
+    </div><!-- /card-container -->
+</div><!-- /container -->
