--- a/Client/app/+login/login.component.scss
+++ b/Client/app/+login/login.component.scss
@@ -1,7 +1,7 @@
 h2   {color:white}
 p    {color:white}
 
-body, html {
+ body, html {
     height: 100%;
     background-repeat: no-repeat;
     background-image: linear-gradient(135deg, rgba(31,123,229,1) 0%, rgba(58,139,232,1) 47%, rgba(70,153,234,1) 92%, rgba(72,156,234,1) 100%);
@@ -21,7 +21,9 @@ body, html {
     user-select: none;
     cursor: default;
 }
-
+h1 {
+    margin-top: 30px;
+}
 /*
  * Card component
  */
@@ -29,8 +31,7 @@ body, html {
     background-color: #F7F7F7;
     /* just in case there no content*/
     padding: 20px 25px 30px;
-    margin: 0 auto 25px;
-    margin-top: 50px;
+    margin: 20px auto 25px;
     /* shadows and rounded borders */
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
@@ -38,6 +39,9 @@ body, html {
     -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    .card-header{
+
+    }
 }
 
 .profile-img-card {
