--- a/Client/app/+login/login.component.html
+++ b/Client/app/+login/login.component.html
@@ -1,10 +1,7 @@
 ﻿<div class="row">
-    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div class="col-md-6 col-md-offset-3 col-xs-8 col-xs-offset-2">
+        <h1 class="text-center">Login</h1>
         <div class="card">
-            <div class="card-header">
-                Login
-            </div>
-
             <div class="card-block">
                 <appc-error-summary [errors]="errors"></appc-error-summary>
                 <appc-dynamic-form (formsubmit)="login($event)" [controls]="controls" [btnText]="'Login'"></appc-dynamic-form>
