--- a/Client/app/+login/login.component.html
+++ b/Client/app/+login/login.component.html
@@ -1,46 +1,61 @@
-﻿<div class="row">
-    <div class="col-md-6 col-md-offset-3 col-xs-8 col-xs-offset-2">
-        <h1 class="text-center">Login</h1>
-        <div class="card">
-            <div class="card-block">
-                <appc-error-summary [errors]="errors"></appc-error-summary>
-                <appc-dynamic-form (formsubmit)="login($event)" [controls]="controls" [btnText]="'Login'"></appc-dynamic-form>
-            </div>
+﻿<!--<div class="container">-->
+<!--<div class="card card-container">-->
 
-        </div>
-
-        <p class="text-center font-weight-bold">
-            OR
-        </p>
-
-        <div class="text-center">
-            <appc-social-login></appc-social-login>
-        </div>
-
-    </div>
-</div>
-
-<!--<div class="container">-->
-    <!--<div class="card card-container">-->
-        <!--<img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />-->
-        <!--<p id="profile-name" class="profile-name-card"></p>-->
-
-        <!--<form (ngSubmit)="save()" [formGroup]="editForm" class="form-signin">-->
-            <!--<span id="reauth-email" class="reauth-email"></span>-->
-            <!--<input formControlName="email" type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>-->
-            <!--<input formControlName="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>-->
-            <!--<div id="remember" class="checkbox">-->
-                <!--<label>-->
-                    <!--<input formControlName="rememberMe" type="checkbox" value="remember-me"> Remember me-->
-                <!--</label>-->
-            <!--</div>-->
-            <!--<button [disabled]="isProcessing" class="btn btn-lg btn-success btn-block btn-signin" type="submit">-->
-                <!--<i *ngIf="isProcessing" class="fa fa-spinner fa-spin" aria-hidden="true"></i> Login-->
-            <!--</button>-->
-        <!--</form>&lt;!&ndash; /form &ndash;&gt;-->
-
-        <!--<a href="#" class="forgot-password">-->
-            <!--Forgot the password?-->
-        <!--</a>-->
-    <!--</div>&lt;!&ndash; /card-container &ndash;&gt;-->
+<!--&lt;!&ndash;<form (ngSubmit)="save()" [formGroup]="editForm" class="form-signin">&ndash;&gt;-->
+<!--&lt;!&ndash;<span id="reauth-email" class="reauth-email"></span>&ndash;&gt;-->
+<!--&lt;!&ndash;<input formControlName="username" type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>&ndash;&gt;-->
+<!--&lt;!&ndash;<input formControlName="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>&ndash;&gt;-->
+<!--&lt;!&ndash;<div id="remember" class="checkbox">&ndash;&gt;-->
+<!--&lt;!&ndash;<label>&ndash;&gt;-->
+<!--&lt;!&ndash;<input type="checkbox" value="remember-me"> Remember me&ndash;&gt;-->
+<!--&lt;!&ndash;</label>&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--&lt;!&ndash;<button [disabled]="isProcessing" class="btn btn-lg btn-success btn-block btn-signin" type="submit">&ndash;&gt;-->
+<!--&lt;!&ndash;<i *ngIf="isProcessing" class="fa fa-spinner fa-spin" aria-hidden="true"></i> Login&ndash;&gt;-->
+<!--&lt;!&ndash;</button>&ndash;&gt;-->
+<!--&lt;!&ndash;</form>&lt;!&ndash; /form &ndash;&gt;&ndash;&gt;-->
+<!--<form (ngSubmit)="save()" [formGroup]="editForm">-->
+<!--<div class="group">-->
+<!--<input formControlName="username" type="email" autocomplete="off">-->
+<!--<span class="highlight"></span><span class="bar"></span>-->
+<!--<label>Email</label>-->
+<!--</div>-->
+<!--<div class="group">-->
+<!--<input formControlName="password" type="password" autocomplete="off">-->
+<!--<span class="highlight"></span>-->
+<!--<span class="bar"></span>-->
+<!--<label>Пароль</label>-->
+<!--</div>-->
+<!--<button [disabled]="isProcessing" type="submit" class="button buttonBlue">-->
+<!--<i *ngIf="isProcessing" class="fa fa-spinner fa-spin" aria-hidden="true"></i> Войти-->
+<!--</button>-->
+<!--</form>-->
+<!--</div>&lt;!&ndash; /card-container &ndash;&gt;-->
 <!--</div>&lt;!&ndash; /container &ndash;&gt;-->
+
+<div class="form">
+    <div id="login">
+        <h1>Вход в систему</h1>
+        <form (ngSubmit)="save()" [formGroup]="editForm">
+            <div class="field-wrap">
+                <input formControlName="username" type="email" placeholder="Email"
+                       [ngClass]="{'validation-error': editForm.controls['username'].hasError('required') && submitted}"
+                       autocomplete="off"/>
+                <p class="validation-error" *ngIf="editForm.controls['username'].hasError('required') && submitted">
+                    Email required</p>
+            </div>
+            <div class="field-wrap">
+                <input formControlName="password" type="password" placeholder="Password"
+                       [ngClass]="{'validation-error': editForm.controls['password'].hasError('required') && submitted}"
+                       autocomplete="off"/>
+                <p class="validation-error" *ngIf="editForm.controls['password'].hasError('required') && submitted">
+                    Password required</p>
+            </div>
+            <p class="forgot"><a href="#">Forgot Password?</a></p>
+            <button [disabled]="isProcessing" type="submit" class="button button-block">
+                <i *ngIf="isProcessing" class="fa fa-spinner fa-spin" aria-hidden="true"></i> Войти
+            </button>
+        </form>
+    </div>
+</div> <!-- /form -->
+
