--- a/Client/app/+pages/+profile/changepassword/change-password.component.html
+++ b/Client/app/+pages/+profile/changepassword/change-password.component.html
@@ -35,7 +35,7 @@
             </span>
             </div>
 
-            <button (click)="changePassword()" class="btn btn-primary pull-right">Change password</button>
+            <button (click)="changePassword()" class="btn btn-success pull-right">Change password</button>
 
         </form>
     </div>
