--- a/Client/app/+pages/+profile/changename/change-name.component.html
+++ b/Client/app/+pages/+profile/changename/change-name.component.html
@@ -23,7 +23,7 @@
                 </label>
             </div>
 
-            <button class="btn btn-primary pull-right" (click)="save()" [disabled]="!hf.form.valid">Update</button>
+            <button class="btn btn-success pull-right" (click)="save()" [disabled]="!hf.form.valid">Update</button>
         </form>
     </div>
 </div>
