--- a/Client/app/+pages/+profile/profile.component.html
+++ b/Client/app/+pages/+profile/profile.component.html
@@ -4,10 +4,10 @@
 </div>
 
 <div class="row">
-    <div class="col-md-6 col-xs-10 col-xs-offset-1">
+    <div class="col-md-6 col-md-offset-0 col-sm-10 col-sm-offset-1">
         <appc-change-name (notification)="notify($event)"></appc-change-name>
     </div>
-    <div class="col-md-6 col-xs-10 col-xs-offset-1">
+    <div class="col-md-6 col-md-offset-0 col-sm-10 col-sm-offset-1">
         <appc-change-password (notification)="notify($event)"></appc-change-password>
     </div>
 </div>
