--- a/Client/app/+pages/pages.component.html
+++ b/Client/app/+pages/pages.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-3 left_col">
             <div class="left_col scroll-view">
                 <div class="navbar nav_title" style="border: 0;">
-                    <a href="index.html" class="site_title"><i class="fa fa-flask"></i> <span>E-liquid MS</span></a>
+                    <a [routerLink]="['/pages']" class="site_title"><i class="fa fa-flask"></i> <span>E-liquid MS</span></a>
                 </div>
 
                 <div class="clearfix"></div>
@@ -27,11 +27,9 @@
                     <div class="menu_section">
                         <h3>Основная информация</h3>
                         <ul class="nav side-menu">
-                            <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-home"></i> Аналитика <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="index.html">Dashboard</a></li>
-                                    <li><a href="index2.html">Dashboard2</a></li>
-                                    <li><a href="index3.html">Dashboard3</a></li>
+                                    <li [routerLink]="['/pages', 'dashboard']"><a>Dashboard</a></li>
                                 </ul>
                             </li>
                             <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
