--- a/Client/app/shared/components/navbar.component.html
+++ b/Client/app/shared/components/navbar.component.html
@@ -13,14 +13,8 @@
                         <span class=" fa fa-angle-down"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-usermenu pull-right">
+                        <li><a [routerLink]="['/pages', 'dashboard']"> Dashboard</a></li>
                         <li><a [routerLink]="['/pages', 'profile']"> Profile</a></li>
-                        <!--<li>-->
-                            <!--<a href="javascript:;">-->
-                                <!--<span class="badge bg-red pull-right">50%</span>-->
-                                <!--<span>Settings</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li><a href="javascript:;">Help</a></li>-->
                         <li (click)="logout()"><a><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                     </ul>
                 </li>
