--- a/Client/app/+pages/+products/list/product-list.component.html
+++ b/Client/app/+pages/+products/list/product-list.component.html
@@ -32,7 +32,7 @@
                         <button [routerLink]="['/pages','products','edit', product.id]" class="btn btn-xs btn-warning">
                             <i class="fa fa-pencil" aria-hidden="true"></i>
                         </button>
-                        <button class="btn btn-xs btn-danger">
+                        <button (click)="deleteProduct(product.id)" class="btn btn-xs btn-danger">
                             <i class="fa fa-close"></i>
                         </button>
                     </td>
