--- a/Client/app/+pages/+products/list/product-list.component.html
+++ b/Client/app/+pages/+products/list/product-list.component.html
@@ -4,7 +4,7 @@
             <h2>Продукция компании</h2>
             <div class="nav navbar-right panel_toolbox">
                 <button [routerLink]="['/pages', 'products', 'add']" class="btn btn-md btn-success">
-                    Добавить
+                    <i class="fa fa-plus" aria-hidden="true"></i> Добавить
                 </button>
             </div>
             <div class="clearfix"></div>
