--- a/Client/styles/vendor.css
+++ b/Client/styles/vendor.css
@@ -3,5 +3,7 @@
 
 @import '../../node_modules/font-awesome/css/font-awesome.css';
 @import '../../node_modules/bootstrap/dist/css/bootstrap.css';
+@import "../../node_modules/ng2-toastr/bundles/ng2-toastr.min.css";
+
 @import "custom.scss";
 @import "daterangepicker.scss";
