--- a/Client/app/+pages/pages.component.html
+++ b/Client/app/+pages/pages.component.html
@@ -32,14 +32,9 @@
                                     <li [routerLink]="['/pages', 'dashboard']"><a>Dashboard</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-edit"></i> Продукция <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="form.html">General Form</a></li>
-                                    <li><a href="form_advanced.html">Advanced Components</a></li>
-                                    <li><a href="form_validation.html">Form Validation</a></li>
-                                    <li><a href="form_wizards.html">Form Wizard</a></li>
-                                    <li><a href="form_upload.html">Form Upload</a></li>
-                                    <li><a href="form_buttons.html">Form Buttons</a></li>
+                                    <li><a [routerLink]="['/pages', 'products']">Список</a></li>
                                 </ul>
                             </li>
                         </ul>
