--- a/Client/app/+pages/pages.component.html
+++ b/Client/app/+pages/pages.component.html
@@ -38,6 +38,12 @@
                                     <li><a [routerLink]="['/pages', 'products']">Список</a></li>
                                 </ul>
                             </li>
+                            <li><a><i class="fa fa-edit"></i> Клиенты <span class="fa fa-chevron-down"></span></a>
+                                <ul class="nav child_menu">
+                                    <li><a [routerLink]="['/pages', 'clients', 'add']">Добавить клиента</a></li>
+                                    <li><a [routerLink]="['/pages', 'clients']">Клиенты</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
                     <div class="menu_section">
