--- a/Client/app/+pages/+clients/list/clients-list.component.html
+++ b/Client/app/+pages/+clients/list/clients-list.component.html
@@ -10,47 +10,48 @@
             <div class="clearfix"></div>
         </div>
         <div class="x_content">
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th>Название</th>
-                    <th>Адресс</th>
-                    <th>Адресс доставки</th>
-                    <th>Контактное лицо</th>
-                    <th>Телефон № 1</th>
-                    <th>Телефон № 2</th>
-                    <th>Статус</th>
-                    <th>Информация</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr *ngFor="let client of clients"
-                    [ngClass]="{'success': client.status === templateConst.clientStatus.active,
+            <div class="table-responsive">
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th>Название</th>
+                        <th>Адресс</th>
+                        <th>Адресс доставки</th>
+                        <th>Контактное лицо</th>
+                        <th>Телефон № 1</th>
+                        <th>Телефон № 2</th>
+                        <th>Статус</th>
+                        <th>Информация</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let client of clients"
+                        [ngClass]="{'success': client.status === templateConst.clientStatus.active,
                     'warning': client.status === templateConst.clientStatus.pending,
                     'danger': client.status === templateConst.clientStatus.inactive}">
-                    <td><b><a [routerLink]="['/pages','clients','details', client.id]">{{client.name}}</a></b></td>
-                    <td>{{client.physicAddress}}</td>
-                    <td>{{client.shippingAddress}}</td>
-                    <td>{{client.contactPerson}}</td>
-                    <td>{{client.phone}}</td>
-                    <td>{{client.secondaryPhone}}</td>
-                    <td>{{templateLang.clientStatus[client.status]}}</td>
-                    <td>{{client.info}}</td>
-                    <td>
-                        <button [routerLink]="['/pages','clients','details', client.id]" class="btn btn-xs btn-info">
-                            <i class="fa fa-eye" aria-hidden="true"></i>
-                        </button>
-                        <button [routerLink]="['/pages','clients','edit', client.id]" class="btn btn-xs btn-warning">
-                            <i class="fa fa-pencil" aria-hidden="true"></i>
-                        </button>
-                        <button (click)="deleteClient(client)" class="btn btn-xs btn-danger">
-                            <i class="fa fa-close"></i>
-                        </button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-
+                        <td><b><a [routerLink]="['/pages','clients','details', client.id]">{{client.name}}</a></b></td>
+                        <td>{{client.physicAddress}}</td>
+                        <td>{{client.shippingAddress}}</td>
+                        <td>{{client.contactPerson}}</td>
+                        <td>{{client.phone}}</td>
+                        <td>{{client.secondaryPhone}}</td>
+                        <td>{{templateLang.clientStatus[client.status]}}</td>
+                        <td>{{client.info}}</td>
+                        <td>
+                            <button [routerLink]="['/pages','clients','details', client.id]" class="btn btn-xs btn-info">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                            </button>
+                            <button [routerLink]="['/pages','clients','edit', client.id]" class="btn btn-xs btn-warning">
+                                <i class="fa fa-pencil" aria-hidden="true"></i>
+                            </button>
+                            <button (click)="deleteClient(client)" class="btn btn-xs btn-danger">
+                                <i class="fa fa-close"></i>
+                            </button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
