--- a/Client/app/+pages/+products/list/product-list.component.html
+++ b/Client/app/+pages/+products/list/product-list.component.html
@@ -10,36 +10,37 @@
             <div class="clearfix"></div>
         </div>
         <div class="x_content">
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Наименования</th>
-                    <th>Объём (мл)</th>
-                    <th>Крепость</th>
-                    <th>Описание</th>
-                    <th>Действия</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr *ngFor="let product of products">
-                    <td>{{product.id}}</td>
-                    <td><b>{{product.name}}</b></td>
-                    <td>{{product.volume}}</td>
-                    <td>{{product.nicotineAmount}}</td>
-                    <td>{{product.info}}</td>
-                    <td>
-                        <button [routerLink]="['/pages','products','edit', product.id]" class="btn btn-xs btn-warning">
-                            <i class="fa fa-pencil" aria-hidden="true"></i>
-                        </button>
-                        <button (click)="deleteProduct(product.id)" class="btn btn-xs btn-danger">
-                            <i class="fa fa-close"></i>
-                        </button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-
+            <div class="table-responsive">
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Наименования</th>
+                        <th>Объём (мл)</th>
+                        <th>Крепость</th>
+                        <th>Описание</th>
+                        <th>Действия</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let product of products">
+                        <td>{{product.id}}</td>
+                        <td><b>{{product.name}}</b></td>
+                        <td>{{product.volume}}</td>
+                        <td>{{product.nicotineAmount}}</td>
+                        <td>{{product.info}}</td>
+                        <td>
+                            <button [routerLink]="['/pages','products','edit', product.id]" class="btn btn-xs btn-warning">
+                                <i class="fa fa-pencil" aria-hidden="true"></i>
+                            </button>
+                            <button (click)="deleteProduct(product.id)" class="btn btn-xs btn-danger">
+                                <i class="fa fa-close"></i>
+                            </button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
